--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
         color: #38488f;
         text-decoration: none;
     }
+    h1 {
+        margin-top: 0;
+    }
     @media (max-width: 800px) {
         body {
             background-color: #fff;
