--- a/index.html
+++ b/index.html
@@ -49,6 +49,14 @@
       <li><a href="http://trello.com/">trello</a></li>
       <li>more to be added once you get more organized</li>
       </ul>
+      on hold:
+      <ul>
+          <li>EasyDraw</li>
+          <li>life (py)</li>
+          <li>serveur</li>
+          <li>gh-js</li>
+          <li>haskell</li>
+      </ul>
     </p>
 </div>
 </body>
