--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <i>Harry! You're a freshman!</i>
     <p>
       <ul>
-      <li><a href="timetable.html">timetable</a></li>
+      <li><a href="t.html">timetable</a></li>
       <li><a href="http://trello.com/">trello</a></li>
       <li>more to be added once you get more organized</li>
       </ul>
