--- a/t/index.html
+++ b/t/index.html
@@ -2,6 +2,9 @@
 <html>
 <head>
 <style>
+html {
+    font-family: 'Calibri', sans-serif;
+}
 table, th, td {
     border: 1px solid black;
     border-collapse: collapse;
