--- a/t/index.html
+++ b/t/index.html
@@ -78,7 +78,7 @@ th, td {
   <tr>
     <td>P2</td>
     <td>9:55-11:00</td>		
-    <td id="e">Science</td>
+    <td id="e">English</td>
     <td id="m">Math</td>
     <td id="sc">Science</td>
     <td id="st">Study</td>		
