--- a/f/index.html
+++ b/f/index.html
@@ -8,7 +8,7 @@
         <div id="contents"></div>
         <div class="under">Made by <a href="https://masonx.ca/">Mason</a></div>
         <script src='https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML'></script>
-        <script src='https://cdn.rawgit.com/chjj/marked/88ce4df47c4d994dc1b1df1477a21fb893e11ddc/marked.min.js'></script>
+        <script src='marked.js'></script>
         <script src="globMD.js"></script>
     </body>
 </html>
