--- a/art/index.html
+++ b/art/index.html
@@ -3,7 +3,7 @@
     <head>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
         <link rel="stylesheet" type="text/css" href="style.css">
-        <title>Gallery</title>
+        <title>Mason's art</title>
     </head>
     <body>
         <div id="back"></div>
