--- a/art/gallery.html
+++ b/art/gallery.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <h1>Mason's art</h1>
-        <div class="desc">Hiyo! <a href="https://masonx.ca/">My name is Mason</a>. Over the course of the school year, I've done a bit of art work.<br/ >Here's a gallery consisting of some of the more notable things I've done.</div>
+        <div class="desc">Hiyo! <a href="https://masonx.ca/">My name is Mason</a>. Over the course of the school year, I've done a bit of art work.<br/ >Here's a gallery consisting of some of the more notable things I've done.<br />This gallery is also available in the form of a slideshow <a href=".">here</a>.</div>
         <div id="tags"></div>
         <br />
         <div id="gallery">
