--- a/art/gallery.html
+++ b/art/gallery.html
@@ -6,13 +6,29 @@
     </head>
     <body>
         <h1>Mason's art</h1>
-        <div class="desc">Hiyo! <a href="https://masonx.ca/">My name is Mason</a>. Over the course of the school year, I've done a bit of art work.<br/ >Here's a gallery consisting of some of the more notable things I've done.<br />This gallery is also available in the form of a slideshow <a href=".">here</a>.</div>
+        <div class="desc">
+        Hi there! <a href="https://masonx.ca/">My name is Mason</a>.
+        Over the course of the school year, I've done a bit of art work.<br/ >
+        Here's a gallery consisting of some of the more notable things I've done.<br />
+        This gallery is also available in the form of a slideshow <a href=".">here</a>.<br/>
+        <br/ >
+        I enjoy art and I like designing things.
+        Often, I have trouble coming up with ideas for my projects.
+        Most of the time, however, I end up stumbling upon something... idiosyncratic.
+        Personally, my artwork reflects this quirkiness - traffic cones, ducks, and symbols of the illuminati are not something you'd see in a gallery next to each other, normally.
+        <br />
+        <br />
+        My preferred medium of drawing is something that you can make mistakes on, since I make a lot of them.
+        As a result, I really like acrylic paints (where you just paint over your mistakes), computer modeling/drawing (where undoing is just a press of a button),  and pencils (where you just erase your mistakes).
+        I am working to improve with other forms, though (such as watercolour), since I don't like to limit myself.<br /><br />
+        I also really enjoy rubbing graphite, since I find the smoothness of the result really pleasing :)
+        </div>
         <div id="tags"></div>
         <br />
         <div id="gallery">
         </div>
         <hr />
-        <div>Thanks for checking out my art!</div>
+        <div class="desc">Thanks for checking out my art!</div>
         <br />
         <br />
         <br />
