--- a/art/gallery.html
+++ b/art/gallery.html
@@ -27,12 +27,60 @@
         <br />
         <div id="gallery">
         </div>
+        <br />
+        <br />
+        <br />
         <hr />
-        <div class="desc">Thanks for checking out my art!</div>
-        <br />
-        <br />
-        <br />
-        <br />
+        <h1>Reflection</h1>
+        <div class="desc">
+My artwork typically tends to have little relationship between pieces (since they're mostly just "random" ideas of mine), so typically there is not really a theme.
+However, what the human mind perceives as random does tend to have patterns sometimes, and this year, there is one: Quirkiness.
+Many of my ideas are random, and I suppose them being random is a theme.
+To me, this represents me fairly well: I, myself, tend to come up with random ideas in other classes, too.
+I identify with this random style, so I like artwork from people such as Jackson Pollock, who paint
+with this same "random" style, but end up looking not too bad.
+<br />
+<br />
+I feel that shape/form is the element used the most in my compositions since it plays a very important
+role in making things look realistic. A lot of the time, too, I use the contrast and emphasis principles of design to bring
+out the important subjects of my artwork. Many of my pieces reflect these elements and principles, whether it's my brightly coloured
+traffic cone or my carefully shaded duck. At the start of the year, these were mostly the same as well.
+I feel like I developed most of the basics of artwork already, including my preferred elements and principles of design.
+I still do have room to improve, though.
+<br />
+<br />
+I used a variety of tools and materials this year, ranging from graphite pencils, to acrylic paint, to computers, to watercolour, to coloured pencils.
+Personally, my most favourite would probably be graphite pencils.
+My main technique with them is to layer on shades and get darker eventually, and also use tissues to rub the graphite smoother.
+To me, the end result looks really nice, and you don't even need to put much effort into it.
+Later on, near the end of the year, when I started documenting my process work more, I started learning
+a lot more about the process behind completing a work of art. Starting with the idea, an artist
+must slowly develop the drawing from rough ideas to a more fine-tuned piece of artwork.
+As well, while the process of a piece of art can vary a lot based on the medium, 
+they all tend to include a lot of planning behind it.
+<br />
+<br />
+I developed a lot of my drawing art skills, but the area where I feel like I improved the most is
+with watercolours. I started off being terrible, and then I ended up a lot better. This takeaway
+of not being scared of trying different things is something that I will remember from this course.
+By learning and exploring new things, and improving on things I'm bad at, I feel like I
+can become a better artist.
+<br />
+<br />
+If I could start this course again, I would probably re-do my sketchbook cover (since I feel like I could improve a lot with that),
+and I would probably document my process better. I only really documented my process with my last project, so I was not prepared to
+explain everything at the end of the year. Also, if you document your process, you can improve more with each project.
+I would totally give this advice to new Grade 9 art students, too.
+Nonetheless, even without documenting, I feel that, overall, I improved as an artist.
+I now have a better understanding of the things that go on behind a piece of artwork, and 
+more appreciation for art in general.
+</div>
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
         <script src="gscript.js"></script>
     </body>
 </html>
