--- a/t/index.html
+++ b/t/index.html
@@ -60,17 +60,15 @@ th, td {
     <th>Day 6</th>
     <th>Day 7</th>
     <th>Day 8</th>
-    <th>Day 9</th>
   </tr>
 <tr>
     <td>P1</td>
     <td>8:30-9:50</td>		
     <td id="g">Gym</td>
-    <td id="geo">Geo</td>
+    <td id="geo">History</td>
     <td id="e">English</td>
     <td id="m">Math</td>		
-    <td id="sc">Science</td>
-    <td id="st">Study</td>
+    <td id="sc">Chem</td>
     <td id="a">Art</td>
     <td id="f">French</td>	
     <td id="c">CS</td>
@@ -80,8 +78,7 @@ th, td {
     <td>9:55-11:00</td>		
     <td id="e">English</td>
     <td id="m">Math</td>
-    <td id="sc">Science</td>
-    <td id="st">Study</td>		
+    <td id="sc">Science</td>	
     <td id="a">Art</td>
     <td id="f">French</td>
     <td id="c">CS</td>
@@ -105,7 +102,6 @@ th, td {
     <td>P3</td>
     <td>11:30-12:35</td>		
     <td id="sc">Science</td>
-    <td id="st">Study</td>
     <td id="a">Art</td>
     <td id="f">French</td>		
     <td id="c">CS</td>
@@ -138,20 +134,6 @@ th, td {
     <td id="e">English</td>
     <td id="m">Math</td>
     <td id="sc">Science</td>
-    <td id="st">Study</td>
-  </tr>
-  <tr>
-    <td>P5</td>
-    <td>2:40-3:45</td>		
-    <td id="f">French</td>
-    <td id="c">CS</td>
-    <td id="g">Gym</td>
-    <td id="geo">Geo</td>		
-    <td id="e">English</td>
-    <td id="m">Math</td>
-    <td id="sc">Science</td>
-    <td id="st">Study</td>
-    <td id="a">Art</td>
   </tr>
 </table>
 </body>
